@@ -3,6 +3,7 @@
 ** Unreleased
 
 *** Added:
+  - Enable Rmail email client.
   - Load OS specific font.
   - Configured to use four spaces for indentation.
   - Show column number in the mode line.
